--- a/gitops/clusters/homelab/apps/webtop/deployment.yaml
+++ b/gitops/clusters/homelab/apps/webtop/deployment.yaml
@@ -60,7 +60,7 @@ spec:
         - name: SUDO_ACCESS
           value: "true"
         - name: DOCKER_MODS
-          value: "linuxserver/mods:universal-docker"
+          value: "linuxserver/mods:universal-docker|linuxserver/mods:code-server-python3-poetry|linuxserver/mods:code-server-nodejs"
         ports:
         - containerPort: 3000
           name: http
@@ -93,22 +93,16 @@ spec:
             - /bin/bash
             - -c
             - |
-              # Check if essential CLI tools are available
-              for tool in vim git python3 curl wget; do
-                if ! command -v $tool &> /dev/null; then
-                  exit 1
-                fi
-              done
               # Check if SSH is running
               if [ -f /usr/sbin/sshd ] && ! pgrep sshd > /dev/null; then
                 exit 1
               fi
-              # Check if xRDP is running
+              # Check if xRDP is running  
               if [ -f /usr/sbin/xrdp ] && ! pgrep xrdp > /dev/null; then
                 exit 1
               fi
               exit 0
-          initialDelaySeconds: 120
+          initialDelaySeconds: 60
           periodSeconds: 30
           timeoutSeconds: 10
           successThreshold: 1
