fix: update Prometheus PV node affinity to k3s-vm-pumped-piglet-gpu

--- a/gitops/clusters/homelab/infrastructure/monitoring/prometheus-storage-class.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/prometheus-storage-class.yaml
@@ -28,4 +28,4 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - k3s-vm-still-fawn
+                - k3s-vm-pumped-piglet-gpu
