fix: migrate monitoring stack to k3s-vm-pumped-piglet-gpu node
Update Prometheus and Grafana node selectors from failed k3s-vm-still-fawn
to k3s-vm-pumped-piglet-gpu. Prometheus storage now uses 20TB disk mounted
at /mnt/samba-storage/smb_data/prometheus.

--- a/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
@@ -18,14 +18,14 @@ grafana:
               - key: kubernetes.io/hostname
                 operator: In
                 values:
-                  - k3s-vm-still-fawn
+                  - k3s-vm-pumped-piglet-gpu
 
 prometheus:
   prometheusSpec:
     # Retain 30 days of raw data (adjust as needed)
     retention: 30d
     nodeSelector:
-      kubernetes.io/hostname: k3s-vm-still-fawn
+      kubernetes.io/hostname: k3s-vm-pumped-piglet-gpu
     storageSpec:
       volumeClaimTemplate:
         spec:
@@ -68,7 +68,7 @@ grafana:
               - key: kubernetes.io/hostname
                 operator: In
                 values:
-                  - k3s-vm-still-fawn
+                  - k3s-vm-pumped-piglet-gpu
   smtp:
     enabled: true
     existingSecret: smtp-credentials
