feat: add CLI fallback for SSL certificate failures
- Detect SSL errors in ProxmoxAPI connection
- Fall back to pvesh CLI commands via SSH
- Add use_cli_fallback parameter (default True)
- Implement get_node_status with CLI support
- Add _exec_ssh_command helper for SSH execution
- Update tests to handle .maas suffix behavior
- Fix pyproject.toml: remove invalid asyncio_mode config

TDD approach: wrote tests first, achieved 91% coverage
refs #159

--- a/proxmox/homelab/pyproject.toml
+++ b/proxmox/homelab/pyproject.toml
@@ -58,9 +58,9 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
     "unit: marks tests as unit tests",
-    "mock: marks tests that use mocking extensively"
+    "mock: marks tests that use mocking extensively",
+    "asyncio: marks tests that use asyncio"
 ]
-asyncio_mode = "auto"
 log_cli = true
 log_cli_level = "INFO"
 
