--- a/gitops/clusters/homelab/infrastructure/tailscale/kustomization.yaml
+++ b/gitops/clusters/homelab/infrastructure/tailscale/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - namespace.yaml
   - helmrepository.yaml
   - helmrelease.yaml
-  - connector.yaml
+  # connector.yaml applied separately after CRDs exist
   # NOTE: oauth-secret must be created manually:
   # kubectl create secret generic operator-oauth -n tailscale \
   #   --from-literal=client_id=YOUR_CLIENT_ID \
