fix: re-add connector to kustomization (CRDs now exist)

--- a/gitops/clusters/homelab/infrastructure/tailscale/kustomization.yaml
+++ b/gitops/clusters/homelab/infrastructure/tailscale/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - namespace.yaml
   - helmrepository.yaml
   - helmrelease.yaml
-  # connector.yaml applied separately after CRDs exist
+  - connector.yaml  # CRDs installed by operator
   # NOTE: oauth-secret must be created manually:
   # kubectl create secret generic operator-oauth -n tailscale \
   #   --from-literal=client_id=YOUR_CLIENT_ID \
