fix(crossplane): set started=true to stop VM shutdown loop
Crossplane was reconciling VM 108 every ~10 minutes and shutting it down
because started: false was specified. The passthrough devices are already
configured, so the VM should stay running.

--- a/gitops/clusters/homelab/instances/k3s-vm-still-fawn.yaml
+++ b/gitops/clusters/homelab/instances/k3s-vm-still-fawn.yaml
@@ -29,8 +29,8 @@ spec:
     vmId: 108
     description: "K3s node with AMD GPU (VAAPI) + Coral TPU - Crossplane managed"
 
-    # CRITICAL: Start as false - passthrough job will start after adding devices
-    started: false
+    # VM should stay running - passthrough devices already added
+    started: true
     onBoot: true
 
     # Machine configuration - q35 required for PCI passthrough
