--- a/.github/workflows/frigate-health-checker.yml
+++ b/.github/workflows/frigate-health-checker.yml
@@ -160,6 +160,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    defaults:
+      run:
+        working-directory: .
     steps:
       - name: Trigger Flux webhook (optional)
         run: |
