--- a/gitops/clusters/homelab/infrastructure/nut-pve/cronjob-disaster-drill.yaml
+++ b/gitops/clusters/homelab/infrastructure/nut-pve/cronjob-disaster-drill.yaml
@@ -21,37 +21,48 @@ spec:
           restartPolicy: Never
           containers:
             - name: drill
-              image: curlimages/curl:8.5.0
+              image: dtzar/helm-kubectl:3.14
               command:
-                - /bin/sh
+                - /bin/bash
                 - -c
                 - |
                   echo "=== Monthly UPS Disaster Drill ==="
                   echo "Date: $(date)"
                   echo ""
-                  echo "Testing SMS Gateway connectivity..."
 
-                  # Test SMS Gateway on Pixel 7 hotspot IP
-                  response=$(curl -s -w "\n%{http_code}" -X POST "http://${SMS_GATEWAY_IP}:${SMS_GATEWAY_PORT}/" \
-                    -H "Authorization: ${SMS_GATEWAY_TOKEN}" \
-                    -H "Content-Type: application/json" \
-                    -d "{\"to\": \"${SMS_RECIPIENT}\", \"message\": \"[DRILL] Monthly UPS disaster drill - $(date '+%Y-%m-%d %H:%M'). If you received this, SMS notifications are working.\"}" \
-                    --connect-timeout 10 --max-time 15 2>/dev/null || echo "FAILED")
+                  PVE_HOST="192.168.4.122"
+                  SSH_KEY="/ssh/id_rsa"
+                  SSH_OPTS="-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=30 -i $SSH_KEY"
 
-                  http_code=$(echo "$response" | tail -1)
+                  # Test SMS from pve (which has the hotspot fallback configured)
+                  echo "Testing SMS Gateway from pve..."
+                  ssh $SSH_OPTS root@$PVE_HOST "source /root/.sms-gateway-env && \
+                    curl -s -w '\n%{http_code}' -X POST \"http://\${SMS_GATEWAY_IP}:\${SMS_GATEWAY_PORT}/\" \
+                    -H \"Authorization: \${SMS_GATEWAY_TOKEN}\" \
+                    -H 'Content-Type: application/json' \
+                    -d '{\"to\": \"'\${SMS_RECIPIENT}'\", \"message\": \"[DRILL] Monthly UPS disaster drill - '\$(date '+%Y-%m-%d %H:%M')'. SMS notifications working.\"}' \
+                    --connect-timeout 10 --max-time 15" > /tmp/result.txt 2>&1
+
+                  http_code=$(tail -1 /tmp/result.txt)
+                  cat /tmp/result.txt
 
                   if [ "$http_code" = "200" ] || [ "$http_code" = "204" ]; then
-                    echo "SMS Gateway: OK (HTTP $http_code)"
                     echo ""
+                    echo "SMS Gateway: OK (HTTP $http_code)"
                     echo "Drill complete. Check your phone for the test SMS."
                     exit 0
                   else
-                    echo "SMS Gateway: FAILED (HTTP $http_code)"
-                    echo "Response: $response"
                     echo ""
-                    echo "DRILL FAILED - SMS notifications may not work during power outage!"
+                    echo "SMS Gateway: FAILED (HTTP $http_code)"
+                    echo "DRILL FAILED - Check Pixel 7 hotspot and SMS Gateway app!"
                     exit 1
                   fi
-              envFrom:
-                - secretRef:
-                    name: sms-gateway-creds
+              volumeMounts:
+                - name: ssh-key
+                  mountPath: /ssh
+                  readOnly: true
+          volumes:
+            - name: ssh-key
+              secret:
+                secretName: nut-deploy-ssh-key
+                defaultMode: 0600
